# Rustball

./: .gitignore  Cargo.toml  README.md  ROLLSYNTAX.md  Sixball_Log_2021-04-04-Sun_20:32:50.txt  Sixball_Log_2021-04-04-Sun_21:03:12.txt  config-sample.json
src/: canned_responses.rs  config.rs  main.rs  message_handler.rs  sixball_errors.rs  tests.rs
src/commands/: funsies.rs  general.rs  logging.rs  math.rs  mod.rs  rolling.rs  scryfall.rs
src/dice/: command_translations.rs  dice_errors.rs  dice_re.rs  die.rs  genesymbols.rs  mod.rs  pool.rs  result_kinds.rs  roll.rs  roll_result.rs  roll_stack.rs  roll_token.rs  roll_value.rs  token_kinds.rs  tray.rs  value_kinds.rs
src/funsies/: funsies.rs  mod.rs
src/math/: calculator.rs  math_errors.rs  math_re.rs  mod.rs  rpn_expression.rs  rpn_token.rs
src/messaging/: canned_responses.rs  logger.rs  message_handler.rs  mod.rs
src/scryfall/: booru_post.rs  card.rs  client_handler.rs  mod.rs  req_token.rs  requests.rs  scryfall_errors.rs
