[package]
name = "rustball"
version = "0.2.1"
authors = [""]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache", "framework", "standard_framework"] }
tokio = { version = "1.4", features = ["macros", "rt-multi-thread"] }
chrono = "0.4"
serde = "1.0.125"
serde_json = "1.0.64"